--- a/css/style.scss
+++ b/css/style.scss
@@ -4,4 +4,11 @@
 @import "scss/main-about";
 @import "scss/main-parallax-box";
 @import "scss/main-case";
+@import "scss/main-menu";
+@import "scss/main-blog";
+@import "scss/main-contact";
 @import "scss/footer";
+
+@import "scss/hamburger";
+
+@import "scss/global-sp";
