--- a/css/scss/_header.scss
+++ b/css/scss/_header.scss
@@ -1,4 +1,5 @@
 .header {
+  z-index: 100;
   width: calc(#{$h-width} - #{$h-padding} * 2);
   height: calc(#{$h-height} - #{$h-padding} * 2);
   padding: $h-padding;
@@ -10,6 +11,7 @@
   justify-content: space-between;
   align-items: center;
   flex-direction: column;
+  transition: 0.5s ease;
   &__list {
   }
   &__list-item {
@@ -33,5 +35,8 @@
     width: 100%;
     height: 100%;
     display: block;
+  }
+  &.header--open {
+    transform: translate(0, 0);
   }
 }
