--- a/css/scss/_main-about.scss
+++ b/css/scss/_main-about.scss
@@ -2,8 +2,9 @@
   width: calc(100% - #{$sec-padding-x} * 2);
   background: url(../img/about_bg.jpg);
   background-size: cover;
+  background-position: center;
   display: flex;
-  align-items: start;
+  align-items: center;
   flex-direction: row;
   padding: 20rem $sec-padding-x;
 }
@@ -47,7 +48,7 @@
     font-size: 5rem;
     position: relative;
     padding: 0 0 3rem 0;
-    margin: 5rem 0;
+    margin: 0 0 5rem 0;
     &:after {
       content: "";
       width: 22rem;
