--- a/css/scss/_main-case.scss
+++ b/css/scss/_main-case.scss
@@ -1,19 +1,26 @@
 .case {
   width: calc(100% - #{$sec-padding-x} * 2);
   background: #0a1415;
-  padding: 10rem $sec-padding-x;
+  padding: 10rem $sec-padding-x 15rem $sec-padding-x;
+  border-bottom: solid 1px $color-brown;
+  margin-bottom: 15rem;
 }
 
 .case-txt {
   color: $color-white;
-  margin: 0 0 0 3rem;
+  &__p {
+    width: 90rem;
+    max-width: 100%;
+    margin-left: auto;
+    margin-right: auto;
+  }
   &__ttl {
     text-align: center;
     color: $color-brown;
     font-size: 5rem;
     position: relative;
     padding: 0 0 3rem 0;
-    margin: 0 0 5rem 0;
+    margin: 0 0 4rem 0;
     &:after {
       content: "";
       width: 22rem;
@@ -31,10 +38,17 @@
 
 .case-list {
   width: 100%;
+  max-width: 960px;
   display: flex;
-  justify-content: center;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  margin: 7rem auto 7rem auto;
   &__item {
-    margin: 0 2rem;
+    width: 45%;
+    &:nth-of-type(2n) {
+      transform: translate(0, 50%);
+      margin-bottom: 15rem;
+    }
   }
   &__box {
     padding: 1rem;
@@ -46,27 +60,57 @@
       bottom: 1.4rem;
       left: 1rem;
       width: calc(100% - 2rem);
-      height: 15rem;
+      height: 50%;
       background: linear-gradient(0deg, rgba(0, 0, 0, 1) 0%, rgba(0, 0, 0, 0.75) 30%, rgba(0, 0, 0, 0) 100%);
     }
   }
   &__img {
+    width: 100%;
   }
   &__ttl {
     position: absolute;
-    bottom: 5rem;
+    bottom: 6rem;
     left: 50%;
     z-index: 1;
     transform: translate(-50%, 0);
-    color: $color-white;
-    font-size: 2rem;
+    color: $color-brown;
+    font-size: 3rem;
+  }
+  &__p {
+    color: #fff;
+    text-align: center;
+    position: absolute;
+    bottom: 2.5rem;
+    left: 50%;
+    transform: translate(-50%, 0);
+    width: 90%;
+    z-index: 1;
+    white-space: nowrap;
   }
   &__btn {
-    display: flex;
-    width: fit-content;
-    padding: 0.5rem 5rem;
-    background: $color-brown;
-    margin: 2rem auto 0 auto;
-    color: $color-white;
+    position: absolute;
+    bottom: 0;
+    right: 0;
+    padding: 0.7rem 7rem;
+    color: $color-brown;
+    border: solid 1px $color-brown;
+    background: transparent;
+    white-space: nowrap;
+    &:after {
+      content: "";
+      position: absolute;
+      right: 0;
+      bottom: 50%;
+      width: 10rem;
+      height: 1px;
+      background: $color-brown;
+      transform: translate(50%, -50%);
+      transition: 0.5s ease;
+    }
+    &:hover {
+      &:after {
+        transform: translate(70%, 0);
+      }
+    }
   }
 }
