--- a/css/scss/_main-menu.scss
+++ b/css/scss/_main-menu.scss
@@ -99,8 +99,9 @@
         transform: scale(1.01);
       }
       .menu__btn {
+        box-shadow: -5px -5px 0px #0a1415;
         &:after {
-          transform: translate(70%, -50%);
+          transform: translate(-100%, -50%) rotateX(180deg);
         }
       }
     }
@@ -115,15 +116,21 @@
     padding: 4% 15%;
     font-size: 1.8rem;
     white-space: nowrap;
+    background: #0a1415;
+    border: solid 1px #c7ac81;
+    box-shadow: 5px 5px 0px #0a1415;
+    color: #c7ac81;
     &:after {
       content: "";
-      width: 20%;
-      height: 1px;
-      background: #fff;
+      width: 1.2rem;
+      height: 1.2rem;
+      background: url(../img/triangle2.png);
+      background-size: contain;
+      background-repeat: no-repeat;
       position: absolute;
       right: 0;
       top: 50%;
-      transform: translate(50%, -50%);
+      transform: translate(-100%, -50%);
       transition: 0.5s ease;
     }
   }
