--- a/css/style.css
+++ b/css/style.css
@@ -26,6 +26,10 @@
   list-style: none;
 }
 
+html {
+  scroll-behavior: smooth;
+}
+
 body {
   position: relative;
   background: #0a1415;
@@ -94,6 +98,19 @@ p + p {
   background: #c7ac81;
   margin: 2rem auto 0 auto;
   color: #fff;
+}
+
+.to-top {
+  position: fixed;
+  z-index: 100;
+  right: 4rem;
+  bottom: 3rem;
+  cursor: pointer;
+  transition: 1s ease;
+}
+
+.to-top:hover {
+  transform: rotateY(360deg) translateY(-10%);
 }
 
 .header {
@@ -490,8 +507,12 @@ p + p {
   transform: scale(1.01);
 }
 
+.menu__imgbox-8:hover .menu__btn {
+  box-shadow: -5px -5px 0px #0a1415;
+}
+
 .menu__imgbox-8:hover .menu__btn:after {
-  transform: translate(70%, -50%);
+  transform: translate(-100%, -50%) rotateX(180deg);
 }
 
 .menu__btn {
@@ -504,17 +525,23 @@ p + p {
   padding: 4% 15%;
   font-size: 1.8rem;
   white-space: nowrap;
+  background: #0a1415;
+  border: solid 1px #c7ac81;
+  box-shadow: 5px 5px 0px #0a1415;
+  color: #c7ac81;
 }
 
 .menu__btn:after {
   content: "";
-  width: 20%;
-  height: 1px;
-  background: #fff;
+  width: 1.2rem;
+  height: 1.2rem;
+  background: url(../img/triangle2.png);
+  background-size: contain;
+  background-repeat: no-repeat;
   position: absolute;
   right: 0;
   top: 50%;
-  transform: translate(50%, -50%);
+  transform: translate(-100%, -50%);
   transition: 0.5s ease;
 }
 
@@ -651,6 +678,17 @@ p + p {
   transition: 0.5s ease;
   width: 48%;
   height: 35rem;
+  position: relative;
+}
+
+.contact__map:before {
+  position: absolute;
+  content: "";
+  left: 0;
+  top: 0;
+  width: 10rem;
+  height: 10rem;
+  background: #000;
 }
 
 .contact__txtbox {
@@ -884,6 +922,10 @@ p + p {
   .case-list__btn {
     position: relative;
     margin-top: 8rem;
+  }
+  .to-top {
+    right: 3rem;
+    bottom: 2rem;
   }
 }
 /*# sourceMappingURL=style.css.map */
