--- a/css/scss/_footer.scss
+++ b/css/scss/_footer.scss
@@ -1,6 +1,5 @@
 .footer {
-  width: calc(100% - #{$h-width});
-  margin: 0 0 0 $h-width;
+  width: 100%;
   padding: 15rem 0 0 0;
   overflow-x: hidden;
   background: #0a1415;
