--- a/css/style.scss
+++ b/css/style.scss
@@ -9,6 +9,7 @@
 @import "scss/main-contact";
 @import "scss/footer";
 
+@import "scss/loading";
 @import "scss/hamburger";
 
 @import "scss/global-sp";
