--- a/css/scss/_header.scss
+++ b/css/scss/_header.scss
@@ -12,6 +12,7 @@
   align-items: center;
   flex-direction: column;
   transition: 0.5s ease;
+  transform: translate(-100%, 0);
   &__list {
   }
   &__list-item {
