--- a/css/scss/_header.scss
+++ b/css/scss/_header.scss
@@ -22,6 +22,22 @@
     color: $color-brown;
     font-size: 2rem;
     letter-spacing: 0.2rem;
+    position: relative;
+    &:after {
+      content: "";
+      position: absolute;
+      width: 0;
+      height: 1px;
+      left: 0;
+      bottom: 0;
+      background: $color-brown;
+      transition: 0.5s ease;
+    }
+    &:hover {
+      &:after {
+        width: 100%;
+      }
+    }
   }
   &__sns {
     display: flex;
